--- a/SIGNAL/DM/DM2/DM2.tex
+++ b/SIGNAL/DM/DM2/DM2.tex
@@ -145,5 +145,16 @@
 \end{enumerate}
 
 \section{Exercice 2}
-
+\begin{align*}
+    H(S) &= \frac{20S(S+100)}{(S+2)(S+10)} \to _{p \to 0} \frac{20p*100}{2*20} = \frac{100p}{2} = 50p \\
+    20 \log_{10} \left| H(jw) \right|  &= 20 \log_{10} \left| 50jw \right| = 20 \log_{10} 50w \\
+    \text{Avec } w = 1 &: 20 \log_{10} \left| H(jw) \right| = 20 \log_{10} 50
+\end{align*}
+Grâce à ces calculs préalable, on peut maintenant tracer le diagramme de Bode du gain dans la figure \ref*{BodeGain}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics*[]{}
+    \caption{Diagramme de Bode du gain}
+    \label{BodeGain}
+\end{figure}
 \end{document}
