--- a/MAPSI/TME/tme3/tme3.ipynb
+++ b/MAPSI/TME/tme3/tme3.ipynb
@@ -1564,7 +1564,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Si je comprend bien on aurait chaque image de notre dataset $ X_{i,j} $ avec la classe $ i \\in \\{1, \\dots, 10\\} $ et sont numéros dans le dataset $ j \\in \\{0, \\dots, ?\\} $  tel que $ \\forall i, \\forall j,  X_{i,j} \\sim Multi(256, p_{i,1}, \\dots, p_{i,16})$. Ca fait 256 tirages à valeur dans $ q=16 $ niveau de gris.\n",
+    "\n",
+    "Pour apprendre les paramètres, on utilise l'estimateur du maximum vraisemblance, ici on peut démontrer que c'est encore la moyenne empirique pour chaque niveau de gris $ \\hat{p}_{i,k} = \\frac{n_k}{256}, k \\in \\{ 1, \\dots, 16 \\} $ avec $ n_k $ le nombre d'observation ayant pour couleur $ k $.\n",
+    "\n",
+    "On calcule alors la vraisemblance de chaque image dans nos dix classes possibles et on prends la plus vraisemblable pour attribuer la classe $ \\hat{y}_j $. Cette vraisemblance est \n",
+    "$$\n",
+    "    \\sum_{k=1}^{q}n_k \\log_{} p_k\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
