--- a/MAPSI/Cours.tex
+++ b/MAPSI/Cours.tex
@@ -443,13 +443,11 @@ Les données suivent plusieurs gaussienne différente ?
 \end{exmp}
 
 
+\underline{Nouveau cours du 11/10} \\
 
+\section{Tests d'hypothèses}
 
-
-
-
-
-
+tout comme l'année dernière 
 
 
 
